# getregula

./: .claim-allowlist  .claudeignore  .gitignore  .handover.md  .pre-commit-config.yaml  404.html  AGENTS.md  AI_GOVERNANCE.md  AUDIT_REPORT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOVER.md  LICENSE.txt  MODEL_CARD.md  NOTICE  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  STRATEGY.md  TODO.md  action.yml  blog-does-ai-act-apply.html  blog-omnibus-delay.html  blog-risk-tiers-in-code.html  build_competitor_matrix.py  colorado-ai-regulation.html  de.html  garak.regula.yaml  index.html  pt-br.html  pyproject.toml  regula-policy.yaml  regulations.html  robots.txt  sa-tracker.json  (+7 more)
.claude/agents/: ci-healer.md  claim-auditor.md
.claude/commands/: add-command.md  add-pattern.md  verify.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  false-positive.yml  false_positive.md  feature_request.md  pattern-request.yml
.github/workflows/: benchmark.yml  ci.yaml  pages.yml  regula-scan.yaml  self-heal.yaml  test-action.yml  triage.yaml  weekly-digest.yaml  weekly-metrics.yaml
assets/: site.css
benchmarks/: LABELLING_CRITERIA.md  README.md  compare_precision.py  human_labelling_sheet.json  label.py  labels.json  rescan_corpus.py  run_benchmark.py
benchmarks/results/: PRECISION.json  SUMMARY.json  app_aider.json  app_crewai.json  app_deepface.json  app_frigate.json  app_monai.json  app_openadapt.json  app_privategpt.json  app_proctoring.json  app_quivr.json  app_rasa.json  app_resume_matcher.json  app_toad.json  instructor.json  langchain.json  openai-python.json  pydantic-ai.json  scikit-learn.json
benchmarks/synthetic/: manifest.json  run.py
configs/: giskard.regula.yaml  promptfooconfig.regula.yaml
conformity-evidence-getregula-2026-04-14/: 00-assessment-summary.json  README.md  manifest.json
conformity-evidence-getregula-2026-04-14/01-risk-classification/: coverage.json  findings.json
conformity-evidence-getregula-2026-04-14/02-risk-management-art9/: coverage.json  evidence.json
conformity-evidence-getregula-2026-04-14/03-data-governance-art10/: coverage.json  evidence.json
conformity-evidence-getregula-2026-04-14/04-technical-documentation-art11/: annex-iv-draft.md  coverage.json  evidence.json
conformity-evidence-getregula-2026-04-14/05-record-keeping-art12/: coverage.json  evidence.json
conformity-evidence-getregula-2026-04-14/06-transparency-art13/: coverage.json  evidence.json
content/: platform-copy.md
content/devto/: article-5-prohibited-practices.md  (+2 more)
data/: site_facts.json  site_facts.md
demos/: README.md  regula-cli.cast  regula-cli.txt
docs/: AI_GOVERNANCE.md  FULL_INSPECTION.md  LICENSE.Detection.Rules.md  MODEL_CARD.md  QUICKSTART.md  SHOW_HN_DRAFT.md  SUPPORT_SLA.md  TRUST.md  architecture.md  article-south-africa-ai-policy.md  article-state-of-ai-compliance.md  benchmark.md  cli-reference.md  competitor-analysis.md  evidence-pack-guide.md  installation.md  landscape.md  legal-risk-assessment.md  moat-research.md  quickstart.md  regula_gtm_plan.xlsx  repo-readiness-audit.md  research-eval-public-readiness.md  research-eval-report.md  research-synthesis.md  sample_high_risk_annex_iv.md  sample_high_risk_model_card.md  sample_high_risk_qms.md  self-scan-results.md  translation-skill-recommendation.md  uk-compliance-assessment.md  what-regula-does-not-do.md
downloads/: regula-project-audit-2026-04-10.md  scanning-10-ai-apps-eu-ai-act.md
examples/: README.md  regula-rules.yaml
hooks/: __init__.py  post_tool_use.py  pre_tool_use.py  stop_hook.py  version_check.py
references/: FETCH.md  annex_iv_template.md  annex_viii_sections.json  article_obligations.yaml  eu_ai_act_articles_9_15.md  framework_crosswalk.yaml  gpai_code_of_practice.yaml  gpai_obligations.md  gpai_signatories.yaml  harmonised_standards.yaml  iso_42001_mapping.yaml  mitre_atlas.yaml  owasp_llm_top10.yaml  risk_indicators.yaml  tree_sitter_implementation_guide.md
scripts/: __init__.py  __main__.py  adoption_pulse.py  agent_monitor.py  ai_code_governance.py  aibom.py  api_server.py  assess.py  ast_analysis.py  ast_context.py  ast_engine.py  baseline.py  benchmark.py  bias_bbq.py  bias_eval.py  bias_report.py  bias_stats.py  build_delta_log.py  build_plan.py  build_regulations.py  ci_heal.py  claim_auditor.py  classify_risk.py  cli.py  cli_compliance.py  cli_governance.py  cli_monitor.py  cli_report.py  cli_scan.py  cli_util.py  code_analysis.py  compliance_check.py  config_validator.py  conform.py  constants.py  credential_check.py  cross_file_flow.py  custom_rules.py  degradation.py  demo_screenshots.py  (+60 more)
site/: 404.html  CNAME  blog-does-ai-act-apply.html  blog-omnibus-delay.html  blog-risk-tiers-in-code.html  colorado-ai-regulation.html  de.html  index.html  llms.txt  pt-br.html  regulations.html  robots.txt  sitemap.xml  south-africa-ai-policy.html  south-korea-ai-regulation.html  uae.html  uk-ai-regulation.html  writing.html
tests/: helpers.py  test_agent_governance.py  test_ai_codegen.py  test_aibom.py  test_bias_bbq.py  test_bias_report.py  test_bias_stats.py  test_build_regulations.py  test_claim_auditor.py  test_classification.py  test_cli_integration.py  test_coverage_boost.py  test_coverage_critical.py  test_dependency_compromised_text.py  test_dependency_pinning.py  test_doc_audit.py  test_documentation.py  test_evidence_bundle.py  test_evidence_format_v1.py  test_file_provenance.py  test_first_run.py  test_gdpr_patterns.py  test_gpai_check.py  test_guardrails.py  test_hooks_audit.py  test_lifecycle_phases.py  test_lifecycle_visibility.py  test_manifest_timestamp.py  test_mcp_server.py  test_monitor.py  test_new_commands.py  test_open_questions.py  test_owasp_agentic.py  test_redteam_coverage.py  test_register.py  test_registry.py  test_reliability.py  test_report.py  test_risk_decisions.py  test_roadmap.py  (+7 more)
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
web/: Dockerfile  README.md  app.py
(+275 files in other folders)
