[build-system]
requires = ["setuptools>=68,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "regula-ai"
version = "1.6.1"
description = "AI governance risk indication for code — EU AI Act compliance at the point of creation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "The Implementation Layer"}]
keywords = ["ai-governance", "eu-ai-act", "compliance", "claude-code", "risk-indication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Typing :: Typed",
]

[project.optional-dependencies]
yaml = ["pyyaml~=6.0"]
ast = ["tree-sitter~=0.23", "tree-sitter-javascript~=0.23", "tree-sitter-typescript~=0.23"]
test = ["pytest>=7.0"]
pdf = ["weasyprint>=62,<69"]
sentry = ["sentry-sdk~=2.0"]
telemetry = ["sentry-sdk~=2.0"]
all = ["pyyaml~=6.0", "tree-sitter~=0.23", "tree-sitter-javascript~=0.23", "tree-sitter-typescript~=0.23", "weasyprint>=62,<69", "sentry-sdk~=2.0"]

[project.urls]
Homepage = "https://getregula.com"
Repository = "https://github.com/kuzivaai/getregula"
Issues = "https://github.com/kuzivaai/getregula/issues"
Documentation = "https://github.com/kuzivaai/getregula/blob/main/README.md"
Changelog = "https://github.com/kuzivaai/getregula/blob/main/CHANGELOG.md"
"Trust pack" = "https://github.com/kuzivaai/getregula/blob/main/docs/TRUST.md"
"Delta log" = "https://github.com/kuzivaai/getregula/tree/main/content/regulations/delta-log"

[project.scripts]
regula = "scripts.cli:main"

[tool.setuptools.packages.find]
# Explicitly include only packages that are part of the public CLI surface.
# Internal go-to-market tooling and ad-hoc scripts must NOT be added here —
# put them under tools/ (not packaged) instead.
include = ["scripts*", "hooks*", "references*"]
exclude = ["tools*", "benchmarks*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]
"references" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.bandit]
# Project-level rationale for bandit skips. Every suppression below is a
# policy decision, not a per-site ignore, and each is justified in the
# docstring of the relevant module. Hard security checks (B101 assert,
# B102 exec, B301 pickle, B302 marshal, B303 md5 for crypto, B304 ciphers,
# B305 cipher modes, B501–B507 ssl/tls, B601–B602 shell injection,
# B608 sql injection, B609 linux wildcard) REMAIN ENABLED.
exclude_dirs = ["tests", "benchmarks", "dist", "build", "tools"]
skips = [
    # B110 try_except_pass / B112 try_except_continue — Regula uses these
    # extensively for best-effort, optional-feature, and fallback paths
    # (optional deps, optional metadata, graceful feed parsing, etc.).
    # Every such block is a deliberate "degrade gracefully" rather than
    # crash the CLI. Treating each as a security finding produces noise
    # without action.
    "B110",
    "B112",
    # B404 — importing subprocess is not a vulnerability on its own.
    # All actual subprocess call sites are reviewed under B603/B607.
    "B404",
    # B603 — subprocess without shell=True is the SAFER option (no shell
    # interpretation). Flagged by bandit as a reminder, not a bug.
    "B603",
    # B607 — starting a process with a partial path ("git", "sphinx-build").
    # All call sites are dev tooling / benchmark scripts that must honour
    # the developer's PATH; hardcoding /usr/bin/git would break on macOS
    # (/opt/homebrew/bin) and Windows. Dev tooling is never invoked by
    # the installed CLI on an end-user machine.
    "B607",
    # B311 — random.random() / random.choice() used for non-security
    # purposes (bias-eval A/B position shuffle, pattern example picking,
    # etc.). Cryptographic RNG (secrets module) is used where it matters
    # — see scripts/timestamp.py:_build_tsq nonce generation.
    "B311",
]
