[build-system]
requires = ["setuptools>=68,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "regula-ai"
version = "1.6.2"
description = "AI governance risk indication for code — EU AI Act compliance at the point of creation"
readme = "README.md"
license = "(MIT OR EUPL-1.2) AND LicenseRef-DRL-1.1"
license-files = ["LICENSE.txt", "LICENSE.EUPL", "LICENSE.Detection.Rules.md"]
requires-python = ">=3.10"
authors = [{name = "The Implementation Layer"}]
keywords = ["ai-governance", "eu-ai-act", "compliance", "claude-code", "risk-indication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Typing :: Typed",
]

[project.optional-dependencies]
yaml = ["pyyaml~=6.0"]
ast = ["tree-sitter~=0.23", "tree-sitter-javascript~=0.23", "tree-sitter-typescript~=0.23"]
# pytest pinned to the 9.x major (current stable). Dev-only extra —
# contributors install this, end users never do. CI installs latest
# pytest, which resolves to 9.x under this constraint.
test = ["pytest~=9.0"]
# weasyprint bounded across 6 majors (62-68). The lower bound stays at 62
# because that is the oldest major the PDF rendering has been validated
# against; the upper bound of 69 was introduced by dependabot (commit
# 612fa63) to keep users on 62-68 working. Tighter compatible-release
# (e.g. ~=68.0) would break existing installs, so the bounded range stands.
pdf = ["weasyprint>=62,<69"]
# sentry-sdk 2.x stable; 3.x not yet released. ~=2.8 is equivalent to
# >=2.8,<3 but classifies as compatible-release for clearer intent.
sentry = ["sentry-sdk~=2.8"]
telemetry = ["sentry-sdk~=2.8"]
# Flask 3.x is the current stable major; 4.x will break. Tightened from
# >=3.0 to bound the major.
web = ["flask~=3.0"]
# Ed25519 manifest signing (Regula Evidence Format v1.1, §4.5). The Ed25519
# API in `cryptography` has been stable since v2.6 (2019); bounding at
# >=41,<47 allows known-working versions without forcing aggressive upgrades.
signing = ["cryptography>=41,<47"]
all = ["pyyaml~=6.0", "tree-sitter~=0.23", "tree-sitter-javascript~=0.23", "tree-sitter-typescript~=0.23", "weasyprint>=62,<69", "sentry-sdk~=2.8"]

[project.urls]
Homepage = "https://getregula.com"
Repository = "https://github.com/kuzivaai/getregula"
Issues = "https://github.com/kuzivaai/getregula/issues"
Documentation = "https://github.com/kuzivaai/getregula/blob/main/README.md"
Changelog = "https://github.com/kuzivaai/getregula/blob/main/CHANGELOG.md"
"Trust pack" = "https://github.com/kuzivaai/getregula/blob/main/docs/TRUST.md"
"Delta log" = "https://github.com/kuzivaai/getregula/tree/main/content/regulations/delta-log"

[project.scripts]
regula = "scripts.cli:main"

[tool.setuptools.packages.find]
# Explicitly include only packages that are part of the public CLI surface.
# Internal go-to-market tooling and ad-hoc scripts must NOT be added here —
# put them under tools/ (not packaged) instead.
include = ["scripts*", "hooks*", "references*"]
exclude = ["tools*", "benchmarks*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]
"references" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.bandit]
# Project-level rationale for bandit skips. Every suppression below is a
# policy decision, not a per-site ignore, and each is justified in the
# docstring of the relevant module. Hard security checks (B101 assert,
# B102 exec, B301 pickle, B302 marshal, B303 md5 for crypto, B304 ciphers,
# B305 cipher modes, B501–B507 ssl/tls, B601–B602 shell injection,
# B608 sql injection, B609 linux wildcard) REMAIN ENABLED.
exclude_dirs = ["tests", "benchmarks", "dist", "build", "tools"]
skips = [
    # B110 try_except_pass / B112 try_except_continue — Regula uses these
    # extensively for best-effort, optional-feature, and fallback paths
    # (optional deps, optional metadata, graceful feed parsing, etc.).
    # Every such block is a deliberate "degrade gracefully" rather than
    # crash the CLI. Treating each as a security finding produces noise
    # without action.
    "B110",
    "B112",
    # B404 — importing subprocess is not a vulnerability on its own.
    # All actual subprocess call sites are reviewed under B603/B607.
    "B404",
    # B603 — subprocess without shell=True is the SAFER option (no shell
    # interpretation). Flagged by bandit as a reminder, not a bug.
    "B603",
    # B607 — starting a process with a partial path ("git", "sphinx-build").
    # All call sites are dev tooling / benchmark scripts that must honour
    # the developer's PATH; hardcoding /usr/bin/git would break on macOS
    # (/opt/homebrew/bin) and Windows. Dev tooling is never invoked by
    # the installed CLI on an end-user machine.
    "B607",
    # B311 — random.random() / random.choice() used for non-security
    # purposes (bias-eval A/B position shuffle, pattern example picking,
    # etc.). Cryptographic RNG (secrets module) is used where it matters
    # — see scripts/timestamp.py:_build_tsq nonce generation.
    "B311",
]
